--- a/composer.json
+++ b/composer.json
@@ -21,68 +21,24 @@
 	"require": {
 		"php": ">= 5.3.7",
 		"nette/nette": "@dev",
-		"dg/adminer-custom": "1",
-		"dg/dibi": "2.1.*",
-		"clevis/orm": "dev-master",
-		"clevis/skeleton-core": "*",
-		"clevis/migration": "*",
-		"clevis/skeleton-package-installer": "*",
-		"clevis/users-package": "*"
+		"dg/adminer-custom": "1.0",
+		"dg/dibi": "~2.1",
+		"clevis/orm": "@dev",
+		"clevis/skeleton-core": "@dev",
+		"clevis/migration": "@dev",
+		"clevis/skeleton-package-installer": "@dev"
 	},
 	"require-dev": {
 		"phpunit/phpunit": ">=3.7.20",
-		"petrp/httpphpunit": "dev-master",
-		"clevis/se34": "*"
+		"petrp/httpphpunit": "@dev",
+		"clevis/se34": "@dev"
 	},
 	"minimum-stability": "dev",
 
-	"scripts":
-	{
-		"post-install-cmd": [
-			"rm -rf ./vendor/petrp/httpphpunit/libs",
-			"rm -rf ./vendor/petrp/httpphpunit/tests",
-			"rm -rf ./vendor/phpunit/php-code-coverage/Tests",
-			"mv ./vendor/clevis/migration/migrations/* ./migrations"
-		],
-		"post-update-cmd": [
-			"rm -rf ./vendor/petrp/httpphpunit/libs",
-			"rm -rf ./vendor/petrp/httpphpunit/tests",
-			"rm -rf ./vendor/phpunit/php-code-coverage/Tests"
-		]
-	},
-
 	"repositories": [
 		{
-			"type": "vcs",
-			"url": "https://github.com/Clevis/SkeletonCore.git"
-		},
-		{
-			"type": "vcs",
-			"url": "https://github.com/Clevis/SkeletonPackageInstaller.git"
-		},
-		{
-			"type": "vcs",
-			"url": "https://github.com/Clevis/UsersPackage.git"
-		},
-		{
-			"type": "vcs",
-			"url": "https://github.com/Clevis/Migration.git"
-		},
-		{
-			"type": "vcs",
-			"url": "https://github.com/Clevis/OrmInstaller.git"
-		},
-		{
-			"type": "vcs",
-			"url": "https://github.com/Clevis/Orm.git"
-		},
-		{
-			"type": "vcs",
-			"url": "https://github.com/Clevis/HttpPHPUnit.git"
-		},
-		{
-			"type": "vcs",
-			"url": "https://github.com/Clevis/Se34.git"
+			"type": "composer",
+			"url": "http://repo.clevis.org"
 		}
 	]
 }
