--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
 		"clevis/skeleton-package-installer": "@dev"
 	},
 	"require-dev": {
-		"phpunit/phpunit": ">=3.7.20",
+		"phpunit/phpunit": "3.7.*",
 		"petrp/httpphpunit": "@dev",
 		"clevis/se34": "@dev"
 	},
