--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ vendor/*
 .DS_Store
 !.gitignore
 !.htaccess
-/app/config/config.local.neon
+app/config/config.local.neon
+vendor/autoload.php
 
 .dev
