--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,9 @@
 	"require-dev": {
 		"nette/tester": "~1.0"
 	},
-	"minimum-stability": "dev"
+	"minimum-stability": "dev",
+	"scripts": {
+		"post-update-cmd": ["echo Warning: Deleting all .git dirs under vendor ", "rm -rf vendor/**/**/.git"],
+		"post-install-cmd": ["echo Warning: Deleting all .git dirs under vendor", "rm -rf vendor/**/**/.git"]
+	}
 }
