--- a/composer.json
+++ b/composer.json
@@ -29,5 +29,11 @@
 	"scripts": {
 		"post-update-cmd": ["echo Warning: Deleting all .git dirs under vendor ", "rm -rf vendor/**/**/.git"],
 		"post-install-cmd": ["echo Warning: Deleting all .git dirs under vendor", "rm -rf vendor/**/**/.git"]
-	}
+	},
+	"repositories": [
+		{
+			"type": "vcs",
+			"url": "https://github.com/mikulas/monolog"
+		}
+	]
 }
