add unit test scaffolding

--- a/app/config/console.neon
+++ b/app/config/console.neon
@@ -8,3 +8,6 @@ services:
 	-
 		class: Bin\Commands\Scaffolding\Rme
 		tags: [kdyby.console.command]
+	-
+		class: Bin\Commands\Scaffolding\Test\Unit
+		tags: [kdyby.console.command]
