--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "jquery": "latest",
     "respond": "latest",
-    "html5shiv": "latest"
+    "html5shiv": "latest",
+	"bootstrap-stylus": "https://github.com/hworld/bootstrap-stylus.git#master"
   }
 }
