add slq and php migrations

--- a/app/config/console.neon
+++ b/app/config/console.neon
@@ -11,3 +11,6 @@ services:
 	-
 		class: Bin\Commands\Scaffolding\Test\Unit
 		tags: [kdyby.console.command]
+	-
+		class: Bin\Commands\Migrations\Migrate
+		tags: [kdyby.console.command]
