--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
 		"nextras/orm": "@dev",
 		"kdyby/console": "@dev",
 		"doctrine/dbal": "@dev",
-		"kdyby/monolog": "@dev"
+		"kdyby/monolog": "@dev",
+		"nextras/migrations": "~2.3.0"
 	},
 	"require-dev": {
 		"nette/tester": "~1.0"
