--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
 		"nette/tester": "~1.0",
 		"mikulas/lattecs": "~0.3.0-beta",
 		"mikulas/code-sniffs": "~1.0.0",
-		"squizlabs/php_codesniffer": "~1.5.3"
+		"squizlabs/php_codesniffer": "~1.5.3",
+		"symfony/process": "~2.5.0"
 	},
 	"minimum-stability": "dev",
 	"scripts": {
