add test runner command

--- a/app/config/console.neon
+++ b/app/config/console.neon
@@ -20,3 +20,6 @@ services:
 	-
 		class: Bin\Commands\Migrations\Migrate
 		tags: [kdyby.console.command]
+	-
+		class: Bin\Commands\Tests\Run
+		tags: [kdyby.console.command]
