--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
     "jquery": "latest",
     "respond": "latest",
     "html5shiv": "latest",
-	"bootstrap-stylus": "https://github.com/hworld/bootstrap-stylus.git#master"
+	"bootstrap-stylus": "https://github.com/hworld/bootstrap-stylus.git#master",
+	"leaflet": "https://github.com/vperron/leaflet-dist.git#v0.7.2",
+	"leaflet-providers": "https://github.com/leaflet-extras/leaflet-providers.git#1.0.5"
   }
 }
