--- a/app/config/console.neon
+++ b/app/config/console.neon
@@ -23,3 +23,6 @@ services:
 	-
 		class: Bin\Commands\Tests\Run
 		tags: [kdyby.console.command]
+	-
+		class: Bin\Commands\Worker
+		tags: [kdyby.console.command]
