--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -5,11 +5,14 @@
 # http://nette.org/security-warning
 #
 parameters:
+	queue:
+		tubeId: maraton-tasks
+		host: localhost
 
 services:
 	router: App\RouterFactory()::createRouter()
 	- App\Models\Services\Mailer
-	- App\Models\Services\Queue
+	- App\Models\Services\Queue(%queue.host%, %queue.tubeId%)
 
 orm:
 	model: App\Models\Model
