move Model to Orm namespace

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -15,7 +15,7 @@ services:
 	- App\Models\Services\Queue(%queue.host%, %queue.tubeId%)
 
 orm:
-	model: App\Models\Model
+	model: App\Models\Orm\Model
 
 nette:
 	mailer:
