--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -1,12 +1,7 @@
-#
-# SECURITY WARNING: it is CRITICAL that this file & directory are NOT accessible directly via a web browser!
-#
-# If you don't protect this directory from direct web access, anybody will be able to see your passwords.
-# http://nette.org/security-warning
-#
+
 parameters:
 	queue:
-		tubeId: maraton-tasks
+		tubeId: CHANGEME_APPNAME-tasks
 		host: localhost
 
 services:
