--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,5 @@
 {
-  "name": "Frontbase",
-  "version": "0.0.0",
-  "main": "index.html",
+  "name": "Skeleton22",
   "ignore": [
     "**/.*",
     "node_modules",
@@ -12,9 +10,6 @@
     "jquery": "latest",
     "respond": "latest",
     "html5shiv": "latest",
-	"bootstrap-stylus": "https://github.com/hworld/bootstrap-stylus.git#master",
-	"leaflet": "https://github.com/vperron/leaflet-dist.git#v0.7.2",
-	"leaflet-providers": "https://github.com/leaflet-extras/leaflet-providers.git#1.0.5",
-	"JVFloat": "~1.0.0"
+	"bootstrap-stylus": "https://github.com/hworld/bootstrap-stylus.git#master"
   }
 }
