--- a/app/config/bin.neon
+++ b/app/config/bin.neon
@@ -3,39 +3,21 @@
 #
 
 services:
-  # Services
 	- Bin\Services\DoctrineFactory(%database%)
 	- Bin\Services\Scaffolding(%appDir%)
 	- Bin\Services\SchemaBuilder
 
-  # Commands
-	-
-		class: Bin\Commands\Migrations\Migrate
-		tags: [kdyby.console.command]
-	-
-		class: Bin\Commands\Scaffolding\Migration\Php
-		tags: [kdyby.console.command]
-	-
-		class: Bin\Commands\Scaffolding\Migration\Sql
-		tags: [kdyby.console.command]
-	-
-		class: Bin\Commands\Scaffolding\Rme
-		tags: [kdyby.console.command]
-	-
-		class: Bin\Commands\Scaffolding\Test\Unit
-		tags: [kdyby.console.command]
-	-
-		class: Bin\Commands\Schema\Diff
-		tags: [kdyby.console.command]
-	-
-		class: Bin\Commands\Tests\Run
-		tags: [kdyby.console.command]
-	-
-		class: Bin\Commands\Worker
-		tags: [kdyby.console.command]
-
 console:
 	url: http://localhost.dev/
+	commands:
+		- Bin\Commands\Migrations\Migrate
+		- Bin\Commands\Scaffolding\Migration\Php
+		- Bin\Commands\Scaffolding\Migration\Sql
+		- Bin\Commands\Scaffolding\Rme
+		- Bin\Commands\Scaffolding\Test\Unit
+		- Bin\Commands\Schema\Diff
+		- Bin\Commands\Tests\Run
+		- Bin\Commands\Worker
 
 database:
 	dsn: 'mysql:host=127.0.0.1;dbname=%database.database%'
