--- a/app/config/bin.neon
+++ b/app/config/bin.neon
@@ -13,6 +13,7 @@ console:
 		- Bin\Commands\Migrations\Migrate
 		- Bin\Commands\Scaffolding\Migration\Php
 		- Bin\Commands\Scaffolding\Migration\Sql
+		- Bin\Commands\Scaffolding\Presenter
 		- Bin\Commands\Scaffolding\Rme
 		- Bin\Commands\Scaffolding\Test\Unit
 		- Bin\Commands\Schema\Diff
