add tests:data command
Usage:
  php www/index.php t:d migrations/data

Supports single files or directories, sql and php.

--- a/app/config/bin.neon
+++ b/app/config/bin.neon
@@ -17,6 +17,7 @@ console:
 		- Bin\Commands\Scaffolding\Rme
 		- Bin\Commands\Scaffolding\Test\Unit
 		- Bin\Commands\Schema\Diff
+		- Bin\Commands\Tests\Data
 		- Bin\Commands\Tests\Run
 		- Bin\Commands\Worker
 
