replace original queue with pub/sub zmq queues
[Updates #12]

--- a/app/config/bin.neon
+++ b/app/config/bin.neon
@@ -7,6 +7,12 @@ services:
 	- Bin\Services\Scaffolding(%appDir%)
 	- Bin\Services\SchemaBuilder
 
+	zmq.socket.sub:
+		class: ZMQSocket(@zmq.context, ZMQ::SOCKET_PULL)
+		setup:
+			- bind('tcp://*:5557')
+	- App\Models\Services\QueueSubscriber(@zmq.socket.sub)
+
 console:
 	url: http://localhost.dev/
 	commands:
