--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
 		"nette/tester": "~1.2.0",
 		"mikulas/lattecs": "~0.3",
 		"mikulas/code-sniffs": "~1.3",
+		"mikulas/adminer-package": "~4.0",
 		"symfony/process": "~2.4",
 		"jdorn/sql-formatter": "~1.2.17",
 		"oodle/inflect": "~0.2.0",
